# esphomekit

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  esp_homekit.c  esp_homekit.h  http_server.c  http_server.h  main.c  mqtt_xn.c  mqtt_xn.h  wifi_manager.c  wifi_manager.h
spiffs/: index.html
